app/static/css/post-details.css
main {
    margin-top: 70px;
}

@media (max-width: 991px) {
    main {
        margin-top: 260px;
    }
    .homepage-nav {
        display: none;
    }
}

.header {
    background-color: var(--bs-warning-bg-subtle); /* Using Bootstrap variable for background color */
    color: var(--bs-warning-rgb); /* Default text color */
    padding: 60px 0; /* Padding for aesthetic spacing */
    text-align: center; /* Centering the title text */
}

.post-title {
    text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.304); /* 添加阴影效果 */
}

.mt-2{
    margin-top: 2rem; 
}

.mt-0 {
    margin-top: 0;
}

.author-content {
    max-height: 300px; /* 设置最大高度，超出这个高度将出现滚动条 */
    overflow-y: auto; /* 垂直方向超出容器时显示滚动条 */
}

.comment-content{
    /* max-height: 100px; 设置最大高度，超出这个高度将出现滚动条 */
    overflow-y: auto;
}

.sticky-btn {
    position: relative;
    z-index: 1000;
    margin-top: 2rem;
}

.sticky {
    position: fixed;
    top: 76px;
    z-index: 1000;
}

.form-control {
    height: auto;
    border-radius: 7px;
    background-color: #fff;
    border: 1px solid #ccc;
}

#body {
    height: 220px;
}

.commentbtn {
    text-align: center;
}

